--- a/001-Jquery-VS-Vue/简单修改元素内容/VueCode/VueIndex.html
+++ b/001-Jquery-VS-Vue/简单修改元素内容/VueCode/VueIndex.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>简单修改元素内容-Vue</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 	<style type="text/css">
 	#name {
 		color: red;
