--- a/001-Jquery-VS-Vue/简单修改元素内容/jqueryCode/jqueryIndex.html
+++ b/001-Jquery-VS-Vue/简单修改元素内容/jqueryCode/jqueryIndex.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>简单修改元素内容-jquery</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
 <style type="text/css">
