--- a/001-Jquery-VS-Vue/简易购物车/jqueryCode/jqueryIndex.html
+++ b/001-Jquery-VS-Vue/简易购物车/jqueryCode/jqueryIndex.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>index</title>
+	<title>简易购物车-jquery</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 	<style type="text/css">
 		*{
 			margin: 0;
